# CalculatorAPI

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: handlers.rs  main.rs  math.rs  services.rs
