[package]
name = "CalculatorAPI"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["ADAMADA8"]
description = "Simple API for performing basic mathematical operations."
repository = "https://github.com/ADAMADA8/CalculatorAPI"
publish = false

[dependencies]
axum = { version = "0.8" }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.101"

[profile.release]
lto = true
codegen-units = 1